--- a/图片懒加载/lazyLoad.html
+++ b/图片懒加载/lazyLoad.html
@@ -59,6 +59,6 @@
             <img class="pic" alt="加载中..." data-src="https://gcore.jsdelivr.net/gh/Douc1998/CDN-source/image/background/littlePrince1.png" />
         </div>
     </div>
-    <script src="./lazyLoad.js"></script>
+    <script src="./IntersectionObserverAPI.js"></script>
 </body>
 </html>
